Design: Restore decor arcs and fix text overlap by narrowing the collage container

--- a/assets/css/report.css
+++ b/assets/css/report.css
@@ -35,10 +35,10 @@ body {
 /* DECORACIONES - ARCOS GRANDES */
 .decor-top-right {
     position: absolute;
-    top: -100px;
-    right: -100px;
-    width: 320px;
-    height: 320px;
+    top: -50px;
+    right: -50px;
+    width: 200px;
+    height: 200px;
     background-color: var(--color-primary);
     border-radius: 50%;
     z-index: 1;
@@ -46,10 +46,10 @@ body {
 
 .decor-bottom-left {
     position: absolute;
-    bottom: -100px;
-    left: -100px;
-    width: 380px;
-    height: 380px;
+    bottom: -60px;
+    left: -60px;
+    width: 220px;
+    height: 220px;
     background-color: var(--color-primary);
     border-radius: 50%;
     z-index: 10;
@@ -104,7 +104,8 @@ body {
     font-size: 1rem;
     line-height: 1.6;
     color: var(--color-text);
-    max-width: 65%;
+    max-width: 52%;
+    /* Reducido para evitar solapamiento */
     margin-bottom: 25px;
     font-weight: 500;
     position: relative;
@@ -116,7 +117,8 @@ body {
     margin: 20px 0;
     padding-left: 20px;
     list-style: none;
-    max-width: 65%;
+    max-width: 52%;
+    /* Reducido para evitar solapamiento */
     position: relative;
     z-index: 20;
 }
@@ -150,7 +152,8 @@ body {
     list-style: none;
     padding-left: 0;
     margin-bottom: 30px;
-    max-width: 60%;
+    max-width: 52%;
+    /* Reducido para evitar solapamiento */
     position: relative;
     z-index: 20;
 }
@@ -185,7 +188,8 @@ body {
     position: absolute;
     top: 50px;
     right: 0px;
-    width: 450px;
+    width: 380px;
+    /* Más estrecho para no invadir las letras */
     height: 900px;
     z-index: 2;
 }
@@ -206,12 +210,12 @@ body {
 
 .pin-top {
     top: 250px;
-    left: 290px;
+    left: 170px;
 }
 
 .pin-bottom {
-    bottom: 20px;
-    left: 280px;
+    bottom: -15px;
+    left: 178px;
 }
 
 .circular-img {
@@ -225,40 +229,40 @@ body {
     z-index: 50;
 }
 
-/* POSICIONES EXACTAS SEGÚN IMAGEN */
+/* POSICIONES REAJUSTADAS PARA CONTENEDOR 380px */
 .img-1 {
-    width: 160px;
-    height: 160px;
-    top: 210px;
-    right: 20px;
+    width: 140px;
+    height: 140px;
+    top: 120px;
+    right: 40px;
 }
 
 .img-2 {
-    width: 145px;
-    height: 145px;
-    top: 380px;
+    width: 130px;
+    height: 130px;
+    top: 280px;
     left: 30px;
 }
 
 .img-3 {
-    width: 155px;
-    height: 155px;
-    top: 560px;
-    right: 80px;
+    width: 135px;
+    height: 135px;
+    top: 440px;
+    right: 30px;
 }
 
 .img-4 {
-    width: 140px;
-    height: 140px;
-    top: 740px;
-    left: 50px;
+    width: 125px;
+    height: 125px;
+    top: 600px;
+    left: 40px;
 }
 
 .img-5 {
-    width: 170px;
-    height: 170px;
-    bottom: -20px;
-    right: 40px;
+    width: 150px;
+    height: 150px;
+    bottom: 10px;
+    right: 20px;
 }
 
 /* PORTADA */
